--- a/teste_de_velocidade_de_digitacao/assets/css/styles.css
+++ b/teste_de_velocidade_de_digitacao/assets/css/styles.css
@@ -6,6 +6,10 @@
     --color_4: #333333;
 }
 
+* {
+    box-sizing: border-box;
+}
+
 body {
     font-family: Arial, Helvetica, sans-serif;
     max-width: 800px;
@@ -32,6 +36,7 @@ h1 {
     padding: 1.2rem;
     margin-bottom: 1rem;
     border-radius: 5px;
+    width: 100%;
 }
 
 #input {
